--- a/docs/Lectures/Theme_2-Data_Engineering/Lecture_12-Data_Exploration/Lecture_12-Data_Exploration_and_Preprocessing.ipynb
+++ b/docs/Lectures/Theme_2-Data_Engineering/Lecture_12-Data_Exploration/Lecture_12-Data_Exploration_and_Preprocessing.ipynb
@@ -1196,7 +1196,9 @@
     "id": "Iyw_i9iNg8FX"
    },
    "source": [
-    "It seems that both of these columns are the same, except that one is numeric and the other contains text. Let's drop the `class` column. "
+    "It seems that both of these columns are the same, except that one is numeric and the other contains text. Let's drop the `class` column. \n",
+    "\n",
+    "Removing columns that have the same information, also known as **redundant features**, can improve the performance of machine learning models. Specifically, redundant features can cause the model to overfit, as it may learn to rely too heavily on these features for making predictions. Also, having redundant features can lead to longer training times and higher computational complexity. "
    ]
   },
   {
@@ -2935,9 +2937,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Visualization of the data during Exploratory Data Analysis is also a powerful tool for identyfing outliers. Understanding and addressing outliers in data is important for building robust and accurate machine learning models. In this dataset we don't see presense of outliers. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Checking Correlated Features\n",
     "\n",
-    "Checking correlations between the features in a dataset can help to identify similarities between the features. If two features have high correlation, that means they contain similar or perhaps the same information, and if one of them is removed, the performance of the classification algorithm will be less affected. \n",
+    "Checking correlations between the features in a dataset can help to identify similarities between the features. If two features have high correlation, that means they contain similar or perhaps the same information. Similar to our discussion on redundant features, two features that are highly correlated can be considered to contain redundant information. Thefore, it is recommended to remove one of the features to improve the performance of the machine learning algorithms.\n",
     "\n",
     "We use the `corr()` method in pandas to check the correlation between the columns, as shown in the next cell. We will first extract the columns that have numeric or boolean values, and afterward we will calculate the correlation between the columns. Based on the correlation values, there aren't columns that are highly correlated (e.g. with correlation greater than 0.7). One of the reasons is that we already dropped several columns that were similar or the same as other columns."
    ]
