--- a/docs/Lectures/Theme_2-Data_Engineering/Lecture_12-Data_Exploration/Lecture_12-Data_Exploration_and_Preprocessing.ipynb
+++ b/docs/Lectures/Theme_2-Data_Engineering/Lecture_12-Data_Exploration/Lecture_12-Data_Exploration_and_Preprocessing.ipynb
@@ -30,7 +30,7 @@
     "    - [12.1.1 Exploring Column Information](#12.1.1-exploring-column-information)\n",
     "    - [12.1.2 Dealing with Missing Data](#12.1.2-dealing-with-missing-data)\n",
     "    - [12.1.3 Checking Feature Distribution](#12.1.3-checking-feature-distribution)\n",
-    "    - [12.1.4 Checking Correlated Featuress](#12.1.4-checking-correlated-features)\n",
+    "    - [12.1.4 Checking Correlated Features](#12.1.4-checking-correlated-features)\n",
     "- [12.2 Preprocessing Numerical Data](#12.2-preprocessing-numerical-data)\n",
     "    - [12.2.1 Normalization](#12.2.1-normalization)\n",
     "    - [12.2.2 Standardization](#12.2.2-standardization)\n",
