--- a/docs/Lectures/Tutorials/Tutorial_4-Virtual_Environments/Tutorial_4-Virtual_Environments.ipynb
+++ b/docs/Lectures/Tutorials/Tutorial_4-Virtual_Environments/Tutorial_4-Virtual_Environments.ipynb
@@ -63,22 +63,18 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e3c3b4f1",
-   "metadata": {},
+   "id": "be0ccb1b-bb7b-4af6-a91e-7642107ab73b",
+   "metadata": {
+    "tags": []
+   },
    "source": [
     "## Creating a Virtual Environment\n",
     "\n",
-    "To create a virtual environment, run the following command:\n",
+    "To create a virtual environment called `test_env`, run the following command:\n",
     "\n",
-    "`python3 -m venv path/to/new/virutal/environment` (in Unix/MacOS)\n",
+    "`python3 -m venv path_to_new_virutal_environment/test_env` (in Unix/MacOS)\n",
     "\n",
-    "`py -m pip install --user <virtual_environment_name>` (in Windows)\n",
-    "\n",
-    "Alternatively, there is a script installed with the `venv` library to make this slightly more convenient:\n",
-    "\n",
-    "`pyvenv /path/to/new/virtual/environment` (in Unix/MacOS)\n",
-    "\n",
-    "`python -m venv <virtual_environment_name>` (in Windows)\n",
+    "`python -m venv --user path_to_new_virtual_environment\\test_env` (in Windows)\n",
     "\n",
     "<img src=\"images/venv_cmd.png\" width=\"350\">"
    ]
@@ -100,11 +96,13 @@
     "\n",
     "Before we can start installing packages in the virtual environment, we must activate it. Doing so will put the virtual environment-specific Python and pip executables in your shell's `PATH`.\n",
     "\n",
-    "To activate a virtual environment, run the following command: \n",
+    "To activate a virtual environment `test_env`, run the following command: \n",
     "\n",
-    "`source <path-to-venv>/bin/activate` (in Unix/MacOS)\n",
+    "`source path_to_virual_environment/test_env/bin/activate` (in Unix/MacOS)\n",
     "\n",
-    "`<virtual_environment_name>\\Scripts\\activate` (in Windows)\n",
+    "`path_to_virual_environment\\test_env\\Scripts\\activate` (in Windows)\n",
+    "\n",
+    "If you are in the same directory where the virtual environment is located, you don't need to specify the path to the virtual environment, and you can just use `test_env/bin/activate` or `test_env\\Scripts\\activate`.\n",
     "\n",
     "<img src=\"images/activate_env.png\" width=\"350\">"
    ]
@@ -117,7 +115,7 @@
     "\n",
     "To confirm that the virtual environment has been activated you can check the location of your Python interpreter:\n",
     "\n",
-    "`which python` (in Unix/MacOS)\n",
+    "`which python` or `whereis python` (in Unix/MacOS)\n",
     "\n",
     "`where python` (in Windows)\n",
     "\n",
@@ -178,7 +176,7 @@
     "### Creating a `Conda Env` with Commands\n",
     "\n",
     "1) Open the terminal or an Anaconda Prompt.\n",
-    "2) Type: `conda create --name myenv` (or you can specify the python version: `conda create -n myenv python=3.9`).\n",
+    "2) Type: `conda create --n myenv` (or you can specify the python version: `conda create -n myenv python=3.9`).\n",
     "3) Type `y` to proceed.\n",
     "\n",
     "<img src=\"images/conda_env.png\" width=\"450\">"
