--- a/docs/Lectures/Tutorials/Tutorial_4-Virtual_Environments/Tutorial_4-Virtual_Environments.ipynb
+++ b/docs/Lectures/Tutorials/Tutorial_4-Virtual_Environments/Tutorial_4-Virtual_Environments.ipynb
@@ -72,9 +72,11 @@
     "\n",
     "To create a virtual environment called `test_env`, run the following command:\n",
     "\n",
-    "`python3 -m venv path_to_new_virutal_environment/test_env` (in Unix/MacOS)\n",
+    "`python3 -m venv path_to_new_virtual_environment/test_env` (in Unix/MacOS)\n",
     "\n",
-    "`python -m venv --user path_to_new_virtual_environment\\test_env` (in Windows)\n",
+    "`python -m venv path_to_new_virtual_environment\\test_env` (in Windows)\n",
+    "\n",
+    "If we want to create a virtual environment in the current working directory, we can omit the `path_to_new_virtual_environment` in the above code.\n",
     "\n",
     "<img src=\"images/venv_cmd.png\" width=\"350\">"
    ]
@@ -98,9 +100,9 @@
     "\n",
     "To activate a virtual environment `test_env`, run the following command: \n",
     "\n",
-    "`source path_to_virual_environment/test_env/bin/activate` (in Unix/MacOS)\n",
+    "`source path_to_virtual_environment/test_env/bin/activate` (in Unix/MacOS)\n",
     "\n",
-    "`path_to_virual_environment\\test_env\\Scripts\\activate` (in Windows)\n",
+    "`path_to_virtual_environment\\test_env\\Scripts\\activate` (in Windows)\n",
     "\n",
     "If you are in the same directory where the virtual environment is located, you don't need to specify the path to the virtual environment, and you can just use `test_env/bin/activate` or `test_env\\Scripts\\activate`.\n",
     "\n",
