--- a/docs/Lectures/Tutorials/Tutorial_6-Google_Colab/Tutorial_6-Google_Colab.ipynb
+++ b/docs/Lectures/Tutorials/Tutorial_6-Google_Colab/Tutorial_6-Google_Colab.ipynb
@@ -36,29 +36,7 @@
    "source": [
     "Google Colab (or Colaboratary) is a cloud-based platform created by Google that offers an environment for sharing, running, and writing Python code within Google Drive. Colab runs Jupyter notebook files, and it comes with pre-installed popular Data Science and Machine Learning libraries and frameworks, such as TensorFlow, PyTorch, NumPy, pandas, and others.\n",
     "\n",
-    "Google Colab provides CPU, TPU, and GPU support. It enables real-time collaborative editing on a single notebook, much like the collaborative text editing functionality provided by Google Docs.\n",
-    "\n",
-    "This is the official [Colab webpage](https://research.google.com/colaboratory/)."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "id": "j4Hc_TOSIpX1"
-   },
-   "source": [
-    "**Welcome Page of Colab**\n",
-    "\n",
-    "The welcome page offers basic tutorials about working with Jupyter notebooks, data science, and machine learning.\n",
-    "\n",
-    "It provides:\n",
-    "\n",
-    "- Overview of Colab basic features, such as [Code Cells](https://colab.research.google.com/notebooks/basic_features_overview.ipynb) and [Markdown Cells](https://colab.research.google.com/notebooks/markdown_guide.ipynb)\n",
-    "- Loading data: Drive, Sheets, and Google Cloud Storage [Link](https://colab.research.google.com/notebooks/io.ipynb)\n",
-    "- Data Visualization [Link](https://colab.research.google.com/notebooks/charts.ipynb)\n",
-    "- Machine Learning Introduction Course [Link](https://developers.google.com/machine-learning/crash-course/)\n",
-    "\n",
-    "<img width=\"600\" src=\"images/img1.jpg\">"
+    "Google Colab provides CPU, TPU, and GPU support. It enables real-time collaborative editing on a single notebook, much like the collaborative text editing functionality provided by Google Docs."
    ]
   },
   {
@@ -779,6 +757,26 @@
     "<img width=\"400\" src=\"images/img16.png\">\n",
     "\n",
     "<img width=\"400\" src=\"images/img17.png\">"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "id": "j4Hc_TOSIpX1"
+   },
+   "source": [
+    "## Welcome Page of Colab\n",
+    "\n",
+    "The [welcome page of Colab](https://research.google.com/colaboratory/) offers basic tutorials about working with Jupyter notebooks, data science, and machine learning. \n",
+    "\n",
+    "It includes:\n",
+    "\n",
+    "- Overview of Colab basic features, such as [Code Cells](https://colab.research.google.com/notebooks/basic_features_overview.ipynb) and [Markdown Cells](https://colab.research.google.com/notebooks/markdown_guide.ipynb)\n",
+    "- Loading data: Drive, Sheets, and Google Cloud Storage [Link](https://colab.research.google.com/notebooks/io.ipynb)\n",
+    "- Data Visualization [Link](https://colab.research.google.com/notebooks/charts.ipynb)\n",
+    "- Machine Learning Introduction Course [Link](https://developers.google.com/machine-learning/crash-course/)\n",
+    "\n",
+    "<img width=\"600\" src=\"images/img1.jpg\">"
    ]
   },
   {
