--- a/docs/Lectures/Tutorials/Tutorial_6-Google_Colab/Tutorial_6-Google_Colab.ipynb
+++ b/docs/Lectures/Tutorials/Tutorial_6-Google_Colab/Tutorial_6-Google_Colab.ipynb
@@ -15,8 +15,8 @@
     "id": "NggnoFo3IpXz"
    },
    "source": [
-    "[![View notebook on Github](https://img.shields.io/static/v1.svg?logo=github&label=Repo&message=View%20On%20Github&color=lightgrey)](https://github.com/avakanski/Fall-2023-Python-Programming-for-Data-Science/blob/main/docs/Lectures/Theme_2-Data_Engineering/Tutorial_6-Google_Colab/Tutorial_6-Google_Colab.ipynb)\n",
-    "[![Open In Collab](https://colab.research.google.com/assets/colab-badge.svg)](https://colab.research.google.com/github/avakanski/Fall-2023-Python-Programming-for-Data-Science/blob/main/docs/Lectures/Theme_2-Data_Engineering/Tutorial_6-Google_Colab/Tutorial_6-Google_Colab.ipynb)"
+    "[![View notebook on Github](https://img.shields.io/static/v1.svg?logo=github&label=Repo&message=View%20On%20Github&color=lightgrey)](https://github.com/avakanski/Fall-2024-Applied-Data-Science-with-Python/blob/main/docs/Lectures/Tutorials/Tutorial_6-Google_Colab/Tutorial_6-Google_Colab.ipynb)\n",
+    "[![Open In Collab](https://colab.research.google.com/assets/colab-badge.svg)](https://colab.research.google.com/github/avakanski/Fall-2024-Applied-Data-Science-with-Python/blob/main/docs/Lectures/Tutorials/Tutorial_6-Google_Colab/Tutorial_6-Google_Colab.ipynb)"
    ]
   },
   {
@@ -95,21 +95,10 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "id": "isJKg1G_IpX2"
-   },
-   "source": [
-    "3) Create a new Jupyter notebook file. \n",
-    "\n",
-    "<img width=\"250\" src=\"images/img3.jpg\">"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
     "id": "yRozuw2gIpX3"
    },
    "source": [
-    "4) Use the following code to mount your Google Drive in the Jupyter notebook."
+    "3) Use the following code to mount your Google Drive in the Jupyter notebook."
    ]
   },
   {
@@ -142,7 +131,7 @@
     "id": "WT__ZmotIpX5"
    },
    "source": [
-    "5) Click `Connect to Google Drive` to permit the notebook to access Google Drive.\n",
+    "4) Click `Connect to Google Drive` to permit the notebook to access Google Drive.\n",
     "\n",
     "<img width=\"400\" src=\"images/img4.jpg\">"
    ]
@@ -153,7 +142,7 @@
     "id": "eIXX5ZJfIpX5"
    },
    "source": [
-    "6) After you mount the Google Drive, you can load files from the drive. For example, load a csv file. Note that the path to the file needs to start with `drive/My Drive/...`."
+    "5) After you mount the Google Drive, you can load files from the drive. For example, load a csv file. Note that the path to the file needs to start with `drive/My Drive/...`."
    ]
   },
   {
@@ -605,25 +594,6 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "tags": []
-   },
-   "source": [
-    "## Left Pane\n",
-    "\n",
-    "In the left pane, Colab provides several useful tools for managing the notebook environment.\n",
-    "\n",
-    "- **Table of contents**: display the outline of the notebook\n",
-    "- **Find and replace**: search for text within the notebook\n",
-    "- **Variables**: display all the variables that are currently defined in the notebook\n",
-    "- **Secrets**: for saving and managing API keys and other sensitive information\n",
-    "- **Files**: display files available in your Colab environment, including files in your Google Drive\n",
-    "\n",
-    "<img width=\"400\" src=\"images/img18.png\">"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
     "id": "D807CVi4IpX7"
    },
    "source": [
@@ -653,7 +623,7 @@
     "\n",
     "The `Runtime type` arrow allows us to select between `Python3` and `R` programming languages. We can leave it at `Python3`.\n",
     "\n",
-    "Importantly, the `Hardware Accelerator` field allows to select the hardware for the runtime. The options include `CPU`, three `GPU` options, and `TPU`. Note that these options are based on my subscription to Colab Pro. If you are using the free Colab version, you may see only `T4 GPU` available.\n",
+    "Importantly, the `Hardware accelerator` field allows to select the hardware for the runtime. The options include `CPU`, three `GPU` options, and `TPU`. Note that these options are based on my subscription to Colab Pro. If you are using the free Colab version, you may see only `T4 GPU` available.\n",
     "\n",
     "Also, for the  Colab Pro subscription, there is a `High-RAM` button, which allows users to allocate additional RAM memory to the notebook. This feature can be helpful when working with large datasets, that exceed the available RAM memory. The standard RAM memory allocation in Colab is 12 GB, and the High-RAM option allocates 25 GB.\n",
     "\n",
@@ -725,6 +695,25 @@
     "if device_name != '/device:GPU:0':\n",
     "    raise SystemError('GPU device not found')\n",
     "print('Found GPU at: {}'.format(device_name))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "tags": []
+   },
+   "source": [
+    "## Left Pane\n",
+    "\n",
+    "In the left pane, Colab provides several useful tools for managing the notebook environment.\n",
+    "\n",
+    "- **Table of contents**: display the outline of the notebook\n",
+    "- **Find and replace**: search for text within the notebook\n",
+    "- **Variables**: display all the variables that are currently defined in the notebook\n",
+    "- **Secrets**: for saving and managing API keys and other sensitive information\n",
+    "- **Files**: display files available in your Colab environment, including files in your Google Drive\n",
+    "\n",
+    "<img width=\"400\" src=\"images/img18.png\">"
    ]
   },
   {
