--- a/docs/Lectures/Theme_2-Data_Engineering/Lecture_12-Data_Exploration/Lecture_12-Data_Exploration_and_Preprocessing.ipynb
+++ b/docs/Lectures/Theme_2-Data_Engineering/Lecture_12-Data_Exploration/Lecture_12-Data_Exploration_and_Preprocessing.ipynb
@@ -6596,7 +6596,7 @@
    "source": [
     "### Choosing an Encoding Strategy\n",
     "\n",
-    "Choosing an encoding strategy depends on the used models and the type of categories (e.g., ordinal vs. nominal). In general, One-Hot Encoding is the encoding strategy used when the downstream models are linear models, while Ordinal Encoding is often a good strategy with tree-based models."
+    "When working with categorical data in machine learning, choosing an encoding strategy depends on the nature of the categorical features and the type of use machine learning models. "
    ]
   },
   {
@@ -6608,9 +6608,9 @@
     "tags": []
    },
    "source": [
-    "With ordinal encoding, there is an order in the resulting categories, e.g. `0 < 1 < 2` (called **ordinal categories**). The impact of violating this ordering assumption is dependent on the used models. Linear models are impacted by misordered categories, while tree-based models are not.\n",
+    "Ordinal encoding maintains an order in the data categories and it is suitable when categories have a meaningful order, e.g. `0 < 1 < 2` (called **ordinal categories**). The impact of violating this ordering assumption is dependent on the used models. Tree-based ML models, such as Decision Trees, Random Forest, and Gradient Boosting Ensembles work well with ordinal encoded data, as these models can exploit the order of categories. \n",
     "\n",
-    "One-hot encoding is applied when the ordering of the categories is not important. Such categories are also called **nominal categories**. This encoding can cause computational inefficiency in tree-based models with high number of categories, and because of this, it is not recommended to use with these models."
+    "One-hot encoding is applied when the ordering of the categories is not important. Such categories are also called **nominal categories**. This encoding can cause computational inefficiency in tree-based models with a high number of categories, and because of this, it is not recommended to use with these models. Linear ML models, such as Logistic Regression, Linear Regression, and Support Vector Machines work well with one-hot encoding, as these models treat each category independently, and they do not assume order between categories. "
    ]
   },
   {
@@ -7180,7 +7180,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.5"
+   "version": "3.12.4"
   }
  },
  "nbformat": 4,
