--- a/docs/Lectures/Theme_2-Data_Engineering/Lecture_12-Data_Exploration/Lecture_12-Data_Exploration_and_Preprocessing.ipynb
+++ b/docs/Lectures/Theme_2-Data_Engineering/Lecture_12-Data_Exploration/Lecture_12-Data_Exploration_and_Preprocessing.ipynb
@@ -4645,6 +4645,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Alternatively, we can write the code in the above cell in one line, as in:\n",
+    "\n",
+    "    categs_encoded = OrdinalEncoder().fit_transform(titanic[['adult_male', 'alone']])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "The output of the `OrdinalEncoder` is a NumPy array `categs_encoded`, shown below."
    ]
   },
@@ -4928,6 +4937,15 @@
     "\n",
     "# fit the encoder and transform the target column into numerical values\n",
     "target_encoded = label_encoder.fit_transform(target_feat)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "If we wanted to simplify the code, we can write:\n",
+    "\n",
+    "    target_encoded = LabelEncoder().fit_transform(titanic[['embark_town']])"
    ]
   },
   {
@@ -5715,7 +5733,7 @@
    },
    "outputs": [],
    "source": [
-    "dummies = pd.get_dummies(titanic['sex'])"
+    "dummies = pd.get_dummies(titanic['sex'], dtype=float)"
    ]
   },
   {
@@ -5753,28 +5771,28 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>False</td>\n",
-       "      <td>True</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>True</td>\n",
-       "      <td>False</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>True</td>\n",
-       "      <td>False</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>True</td>\n",
-       "      <td>False</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>False</td>\n",
-       "      <td>True</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -5783,28 +5801,28 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>707</th>\n",
-       "      <td>True</td>\n",
-       "      <td>False</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>708</th>\n",
-       "      <td>False</td>\n",
-       "      <td>True</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>709</th>\n",
-       "      <td>True</td>\n",
-       "      <td>False</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>710</th>\n",
-       "      <td>False</td>\n",
-       "      <td>True</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>711</th>\n",
-       "      <td>False</td>\n",
-       "      <td>True</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -5812,18 +5830,18 @@
        "</div>"
       ],
       "text/plain": [
-       "     female   male\n",
-       "0     False   True\n",
-       "1      True  False\n",
-       "2      True  False\n",
-       "3      True  False\n",
-       "4     False   True\n",
-       "..      ...    ...\n",
-       "707    True  False\n",
-       "708   False   True\n",
-       "709    True  False\n",
-       "710   False   True\n",
-       "711   False   True\n",
+       "     female  male\n",
+       "0       0.0   1.0\n",
+       "1       1.0   0.0\n",
+       "2       1.0   0.0\n",
+       "3       1.0   0.0\n",
+       "4       0.0   1.0\n",
+       "..      ...   ...\n",
+       "707     1.0   0.0\n",
+       "708     0.0   1.0\n",
+       "709     1.0   0.0\n",
+       "710     0.0   1.0\n",
+       "711     0.0   1.0\n",
        "\n",
        "[712 rows x 2 columns]"
       ]
@@ -5859,7 +5877,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Note that new columns `female` and `male` with True and False values were added to the right of the DataFrame."
+    "Note that new columns `female` and `male` with 1 and 0 values were added to the right of the DataFrame."
    ]
   },
   {
@@ -5921,8 +5939,8 @@
        "      <td>Southampton</td>\n",
        "      <td>0.0</td>\n",
        "      <td>2</td>\n",
-       "      <td>False</td>\n",
-       "      <td>True</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -5938,8 +5956,8 @@
        "      <td>Cherbourg</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0</td>\n",
-       "      <td>True</td>\n",
-       "      <td>False</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -5955,8 +5973,8 @@
        "      <td>Southampton</td>\n",
        "      <td>1.0</td>\n",
        "      <td>2</td>\n",
-       "      <td>True</td>\n",
-       "      <td>False</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -5972,8 +5990,8 @@
        "      <td>Southampton</td>\n",
        "      <td>0.0</td>\n",
        "      <td>2</td>\n",
-       "      <td>True</td>\n",
-       "      <td>False</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -5989,8 +6007,8 @@
        "      <td>Southampton</td>\n",
        "      <td>1.0</td>\n",
        "      <td>2</td>\n",
-       "      <td>False</td>\n",
-       "      <td>True</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -6004,12 +6022,12 @@
        "3      3         1       1  35.0      1      0  53.1000    1         0.0   \n",
        "4      4         0       3  35.0      0      0   8.0500    0         1.0   \n",
        "\n",
-       "   embark_town  alone  embark_town_ord  female   male  \n",
-       "0  Southampton    0.0                2   False   True  \n",
-       "1    Cherbourg    0.0                0    True  False  \n",
-       "2  Southampton    1.0                2    True  False  \n",
-       "3  Southampton    0.0                2    True  False  \n",
-       "4  Southampton    1.0                2   False   True  "
+       "   embark_town  alone  embark_town_ord  female  male  \n",
+       "0  Southampton    0.0                2     0.0   1.0  \n",
+       "1    Cherbourg    0.0                0     1.0   0.0  \n",
+       "2  Southampton    1.0                2     1.0   0.0  \n",
+       "3  Southampton    0.0                2     1.0   0.0  \n",
+       "4  Southampton    1.0                2     0.0   1.0  "
       ]
      },
      "execution_count": 94,
@@ -6124,8 +6142,8 @@
        "      <td>Southampton</td>\n",
        "      <td>0.0</td>\n",
        "      <td>2</td>\n",
-       "      <td>False</td>\n",
-       "      <td>True</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -6141,8 +6159,8 @@
        "      <td>Cherbourg</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0</td>\n",
-       "      <td>True</td>\n",
-       "      <td>False</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -6158,8 +6176,8 @@
        "      <td>Southampton</td>\n",
        "      <td>1.0</td>\n",
        "      <td>2</td>\n",
-       "      <td>True</td>\n",
-       "      <td>False</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -6175,8 +6193,8 @@
        "      <td>Southampton</td>\n",
        "      <td>0.0</td>\n",
        "      <td>2</td>\n",
-       "      <td>True</td>\n",
-       "      <td>False</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -6192,8 +6210,8 @@
        "      <td>Southampton</td>\n",
        "      <td>1.0</td>\n",
        "      <td>2</td>\n",
-       "      <td>False</td>\n",
-       "      <td>True</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -6207,12 +6225,12 @@
        "3      3         1       1  35.0      1      0  53.1000    1         0.0   \n",
        "4      4         0       3  35.0      0      0   8.0500    0         1.0   \n",
        "\n",
-       "   embark_town  alone  embark_town_ord  female   male  \n",
-       "0  Southampton    0.0                2   False   True  \n",
-       "1    Cherbourg    0.0                0    True  False  \n",
-       "2  Southampton    1.0                2    True  False  \n",
-       "3  Southampton    0.0                2    True  False  \n",
-       "4  Southampton    1.0                2   False   True  "
+       "   embark_town  alone  embark_town_ord  female  male  \n",
+       "0  Southampton    0.0                2     0.0   1.0  \n",
+       "1    Cherbourg    0.0                0     1.0   0.0  \n",
+       "2  Southampton    1.0                2     1.0   0.0  \n",
+       "3  Southampton    0.0                2     1.0   0.0  \n",
+       "4  Southampton    1.0                2     0.0   1.0  "
       ]
      },
      "execution_count": 96,
@@ -6474,8 +6492,8 @@
        "      <td>1.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>2</td>\n",
-       "      <td>False</td>\n",
-       "      <td>True</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>1.0</td>\n",
@@ -6493,8 +6511,8 @@
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0</td>\n",
-       "      <td>True</td>\n",
-       "      <td>False</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
        "      <td>1.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
@@ -6512,8 +6530,8 @@
        "      <td>0.0</td>\n",
        "      <td>1.0</td>\n",
        "      <td>2</td>\n",
-       "      <td>True</td>\n",
-       "      <td>False</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>1.0</td>\n",
@@ -6531,8 +6549,8 @@
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>2</td>\n",
-       "      <td>True</td>\n",
-       "      <td>False</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>1.0</td>\n",
@@ -6550,8 +6568,8 @@
        "      <td>1.0</td>\n",
        "      <td>1.0</td>\n",
        "      <td>2</td>\n",
-       "      <td>False</td>\n",
-       "      <td>True</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>1.0</td>\n",
@@ -6568,12 +6586,12 @@
        "3      3         1       1  35.0      1      0  53.1000    1         0.0   \n",
        "4      4         0       3  35.0      0      0   8.0500    0         1.0   \n",
        "\n",
-       "   alone  embark_town_ord  female   male  Cherbourg  Queenstown  Southampton  \n",
-       "0    0.0                2   False   True        0.0         0.0          1.0  \n",
-       "1    0.0                0    True  False        1.0         0.0          0.0  \n",
-       "2    1.0                2    True  False        0.0         0.0          1.0  \n",
-       "3    0.0                2    True  False        0.0         0.0          1.0  \n",
-       "4    1.0                2   False   True        0.0         0.0          1.0  "
+       "   alone  embark_town_ord  female  male  Cherbourg  Queenstown  Southampton  \n",
+       "0    0.0                2     0.0   1.0        0.0         0.0          1.0  \n",
+       "1    0.0                0     1.0   0.0        1.0         0.0          0.0  \n",
+       "2    1.0                2     1.0   0.0        0.0         0.0          1.0  \n",
+       "3    0.0                2     1.0   0.0        0.0         0.0          1.0  \n",
+       "4    1.0                2     0.0   1.0        0.0         0.0          1.0  "
       ]
      },
      "execution_count": 104,
@@ -6716,8 +6734,8 @@
        "      <td>1.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>2</td>\n",
-       "      <td>False</td>\n",
-       "      <td>True</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>1.0</td>\n",
@@ -6733,8 +6751,8 @@
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0</td>\n",
-       "      <td>True</td>\n",
-       "      <td>False</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
        "      <td>1.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
@@ -6750,8 +6768,8 @@
        "      <td>0.0</td>\n",
        "      <td>1.0</td>\n",
        "      <td>2</td>\n",
-       "      <td>True</td>\n",
-       "      <td>False</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>1.0</td>\n",
@@ -6767,8 +6785,8 @@
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>2</td>\n",
-       "      <td>True</td>\n",
-       "      <td>False</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>1.0</td>\n",
@@ -6784,8 +6802,8 @@
        "      <td>1.0</td>\n",
        "      <td>1.0</td>\n",
        "      <td>2</td>\n",
-       "      <td>False</td>\n",
-       "      <td>True</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>1.0</td>\n",
@@ -6818,8 +6836,8 @@
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>1</td>\n",
-       "      <td>True</td>\n",
-       "      <td>False</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>1.0</td>\n",
        "      <td>0.0</td>\n",
@@ -6835,8 +6853,8 @@
        "      <td>1.0</td>\n",
        "      <td>1.0</td>\n",
        "      <td>2</td>\n",
-       "      <td>False</td>\n",
-       "      <td>True</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>1.0</td>\n",
@@ -6852,8 +6870,8 @@
        "      <td>0.0</td>\n",
        "      <td>1.0</td>\n",
        "      <td>2</td>\n",
-       "      <td>True</td>\n",
-       "      <td>False</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>1.0</td>\n",
@@ -6869,8 +6887,8 @@
        "      <td>1.0</td>\n",
        "      <td>1.0</td>\n",
        "      <td>0</td>\n",
-       "      <td>False</td>\n",
-       "      <td>True</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
        "      <td>1.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
@@ -6886,8 +6904,8 @@
        "      <td>1.0</td>\n",
        "      <td>1.0</td>\n",
        "      <td>1</td>\n",
-       "      <td>False</td>\n",
-       "      <td>True</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>1.0</td>\n",
        "      <td>0.0</td>\n",
@@ -6911,18 +6929,18 @@
        "710       1  26.0      0      0  30.0000    0         1.0    1.0   \n",
        "711       3  32.0      0      0   7.7500    0         1.0    1.0   \n",
        "\n",
-       "     embark_town_ord  female   male  Cherbourg  Queenstown  Southampton  \n",
-       "0                  2   False   True        0.0         0.0          1.0  \n",
-       "1                  0    True  False        1.0         0.0          0.0  \n",
-       "2                  2    True  False        0.0         0.0          1.0  \n",
-       "3                  2    True  False        0.0         0.0          1.0  \n",
-       "4                  2   False   True        0.0         0.0          1.0  \n",
-       "..               ...     ...    ...        ...         ...          ...  \n",
-       "707                1    True  False        0.0         1.0          0.0  \n",
-       "708                2   False   True        0.0         0.0          1.0  \n",
-       "709                2    True  False        0.0         0.0          1.0  \n",
-       "710                0   False   True        1.0         0.0          0.0  \n",
-       "711                1   False   True        0.0         1.0          0.0  \n",
+       "     embark_town_ord  female  male  Cherbourg  Queenstown  Southampton  \n",
+       "0                  2     0.0   1.0        0.0         0.0          1.0  \n",
+       "1                  0     1.0   0.0        1.0         0.0          0.0  \n",
+       "2                  2     1.0   0.0        0.0         0.0          1.0  \n",
+       "3                  2     1.0   0.0        0.0         0.0          1.0  \n",
+       "4                  2     0.0   1.0        0.0         0.0          1.0  \n",
+       "..               ...     ...   ...        ...         ...          ...  \n",
+       "707                1     1.0   0.0        0.0         1.0          0.0  \n",
+       "708                2     0.0   1.0        0.0         0.0          1.0  \n",
+       "709                2     1.0   0.0        0.0         0.0          1.0  \n",
+       "710                0     0.0   1.0        1.0         0.0          0.0  \n",
+       "711                1     0.0   1.0        0.0         1.0          0.0  \n",
        "\n",
        "[712 rows x 14 columns]"
       ]
@@ -7180,7 +7198,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.4"
+   "version": "3.11.5"
   }
  },
  "nbformat": 4,
